<resources>
    <string name="app_name">mindfulMoments</string>
    <string name="meditation_selection">Выбор медитации</string>
    <string name="mindful_breathing_meditation">Осознанная дыхательная медитация</string>
    <string name="body_scan_meditation">Медитация сканирования тела</string>
    <string name="loving_kindness_editation">Медитация любящей доброты</string>
    <string name="mindful_moments">Осознанные моменты</string>
    <string name="meditation">Медитация</string>
    <string name="nature_sounds">Звуки природы</string>
    <string name="gratitude_journal">Дневник благодарности</string>
    <string name="settings">Настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="soothing_sounds_of_rain">Успокаивающие звуки дождя</string>
    <string name="the_enticing_sound_of_the_forest">Заманчивый звук леса</string>
    <string name="alluring_sound_of_the_ocean">Заманчивый шум океана</string>
    <string name="sounds_of_a_summer_fire">Звуки летнего костра</string>
    <string name="viewpreviousentries">Посмотреть предыдущие записи</string>
    <string name="save">Сохранить</string>
</resources>