<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/neutral_background_color">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textColor="@color/accent_color"
        android:text="@string/nature_sounds"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonSoothingSoundsOfRain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/soothing_sounds_of_rain"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/buttonTheEnticingSoundOfTheForest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/the_enticing_sound_of_the_forest"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/buttonAlluringSoundOfTheOcean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/alluring_sound_of_the_ocean"
        android:layout_marginBottom="8dp" />
    <Button
        android:id="@+id/buttonSoundsOfASummerFire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/sounds_of_a_summer_fire"
        android:layout_marginBottom="8dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/naturesounds" />

    <!-- Другие виды медитаций -->

</LinearLayout>