<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/neutral_background_color">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meditation_selection"
        android:textStyle="italic"
        android:textColor="@color/accent_color"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttomMindfulBreathingMeditation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/mindful_breathing_meditation"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/buttomBodyScanMeditation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/body_scan_meditation"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/buttonLovingKindnessEditation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/loving_kindness_editation"
        android:layout_marginBottom="8dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/yogalogo" />

</LinearLayout>